kustomizes/demo-sxapi/overlays/0.3.52/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: "demo-sxapi"
  namespace: "demo-sxapi"
spec:
  to:
    kind: Service
    name: "demo-sxapi-0-3-52"
